syntax = "proto3";

package grpc_image_processor;
option go_package = "./pb";

message UploadImageRequest {
    oneof data {
        ImageBounds bounds = 1;
        bytes data_chunk = 2;
    }
}

message ImageBounds {
    int64 min_x = 1;
    int64 min_y = 2;
    int64 max_x = 3;
    int64 max_y = 4;
}

message UploadImageResponse {
    bytes data_chunk = 1;
}

service ImageProcessor {
    rpc DetectFaces(stream UploadImageRequest) returns (stream UploadImageResponse);
}